# requests-cgi

./: README.md  pyproject.toml
examples/: cgi.py  php.py
requests_cgi/: __init__.py  cgi_adapter.py  cgi_response.py  fcgi_adapter.py  php_adapter.py  php_fpm_adapter.py
requests_cgi/fcgi_adapter/: __init__.py  connection.py  protocol.py
tests/: conftest.py  echo.php  echo.sh  test_cgi.py  test_fcgi.py  test_php.py
tests/cgi_scripts/: cookie.php  echo.php  get.sh  malformed.sh  status_404_parsed.sh  status_404_unparsed.sh  status_500.php  timeout.sh
tests/fcgi_scripts/: echo.py  get.py  launched.py  reflect.py  status_404.py
